add data to the map

--- a/python/data_processing.ipynb
+++ b/python/data_processing.ipynb
@@ -332,7 +332,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sub_sample = pd.DataFrame(a).reset_index().query('year == 2009')\n",
+    "sub_sample = sub_sample.query(\"subject_sex == 'female'\")\n",
+    "sub_sample.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_sample.to_csv('arrest_2009_female_ca.csv')"
+   ]
   }
  ],
  "metadata": {
