--- a/python/data_processing.ipynb
+++ b/python/data_processing.ipynb
@@ -359,9 +359,9 @@
     "ethni = ethni.reset_index()\n",
     "ethni['county_name'] = ethni['county_name'].str.strip(' County')\n",
     "ethni_white = ethni.query(\"subject_race == 'white'\")\n",
-    "ethni_white.to_csv('data/arrest_white.csv')\n",
+    "ethni_white.to_csv('data/arrest_white_ca.csv')\n",
     "ethni_black = ethni.query(\"subject_race == 'black'\")\n",
-    "ethni_black.to_csv('data/arrest_black.csv')"
+    "ethni_black.to_csv('data/arrest_black_ca.csv')"
    ]
   }
  ],
