--- a/python/data_processing.ipynb
+++ b/python/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ca = pd.read_pickle(\"data/ca_cleaned.pkl\", compression= \"gzip\")\n",
-    "df_tx = pd.read_pickle(\"data/ca_cleaned.pkl\", compression = \"gzip\")"
+    "df_ca = pd.read_pickle(\"../data/ca_cleaned.pkl\", compression= \"gzip\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +131,7 @@
        "4             True        other  summons  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,14 +362,21 @@
     "ethni_black = ethni.query(\"subject_race == 'black'\")\n",
     "ethni_black.to_csv('data/arrest_black_ca.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Texas"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "c17a2f0c0e64c9a590fa3e64daeb0fdcc5a90ae85d642100fae3c7a79fe3dbac"
+   "hash": "ee784ad58132e9462f1f8cf86dca212ca28d7fa75053eeffe69366db508fdd8a"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('ada')",
+   "display_name": "Python 3.8.5 ('ada')",
    "language": "python",
    "name": "python3"
   },
@@ -384,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
