compute hit rate ethnicity

--- a/python/data_processing.ipynb
+++ b/python/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,6 +1681,216 @@
     "arrest_ethnicity.to_csv('../data/arrest_ethnicity.csv')\n",
     "arrest_gender.to_csv('../data/arrest_gender.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hit Rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_contraband = pd.read_csv('../data/ca_statewide.csv.zip', compression = 'zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, True, False], dtype=object)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_contraband.contraband_found.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_contraband_cleaned = df_contraband.dropna(subset=['contraband_found'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_contraband_cleaned[\"date\"] = pd.to_datetime(df_contraband_cleaned[\"date\"])\n",
+    "df_contraband_cleaned[\"year\"] = df_contraband_cleaned[\"date\"].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_contraband_cleaned['county_name'] = df_contraband_cleaned['county_name'].str[:-7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_contraband_cleaned_ethnicity = df_contraband_cleaned.groupby(['year','county_name','subject_race'])['contraband_found'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>contraband_found</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th>county_name</th>\n",
+       "      <th>subject_race</th>\n",
+       "      <th>contraband_found</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2009</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Alameda</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">asian/pacific islander</th>\n",
+       "      <th>True</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">black</th>\n",
+       "      <th>True</th>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hispanic</th>\n",
+       "      <th>True</th>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2016</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Yolo</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">hispanic</th>\n",
+       "      <th>True</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>other</th>\n",
+       "      <th>False</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">white</th>\n",
+       "      <th>True</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3386 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                          contraband_found\n",
+       "year county_name subject_race           contraband_found                  \n",
+       "2009 Alameda     asian/pacific islander True                             4\n",
+       "                                        False                            3\n",
+       "                 black                  True                            34\n",
+       "                                        False                           11\n",
+       "                 hispanic               True                            24\n",
+       "...                                                                    ...\n",
+       "2016 Yolo        hispanic               True                             2\n",
+       "                                        False                            1\n",
+       "                 other                  False                            1\n",
+       "                 white                  True                             7\n",
+       "                                        False                            1\n",
+       "\n",
+       "[3386 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = pd.DataFrame(df_contraband_cleaned_ethnicity)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
