compute hit rate gender

--- a/python/Hit_rate_data_processing.ipynb
+++ b/python/Hit_rate_data_processing.ipynb
@@ -8,9 +8,14 @@
    "source": [
     "import pandas as pd\n",
     "import warnings\n",
-    "import glob\n",
-    "import os\n",
     "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ethnicity"
    ]
   },
   {
@@ -24,7 +29,7 @@
     "    df_searched = df.query(\"search_conducted == True\")\n",
     "    df_searched[\"date\"] = pd.to_datetime(df_searched[\"date\"])\n",
     "    df_searched[\"year\"] = df_searched[\"date\"].dt.year\n",
-    "    df_searched_cleaned = df_searched[['year', 'subject_race', 'subject_sex', 'search_conducted', 'contraband_found']]\n",
+    "    df_searched_cleaned = df_searched[['year', 'subject_race', 'search_conducted', 'contraband_found']]\n",
     "    found = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_race'])['contraband_found'].value_counts()).rename(columns={'contraband_found' : 'nb_find'}).reset_index()\n",
     "    all = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_race'])['search_conducted'].value_counts()).rename(columns={'search_conducted' : 'nb_search'}).reset_index()\n",
     "    found_and_all = pd.merge(left = found, right = all, left_on=['year','subject_race'], right_on = ['year', 'subject_race']).drop(['search_conducted'], axis = 1)\n",
@@ -40,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_city = compute_hit_rate_ethnicity('..\\data\\city\\ca_oakland.csv.zip', 'California', 'Oakland')"
+    "all_city_ethnicity = compute_hit_rate_ethnicity('..\\data\\city\\ca_oakland.csv.zip', 'California', 'Oakland')"
    ]
   },
   {
@@ -56,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df = compute_hit_rate_ethnicity('../data/city/tx_san_antonio.csv.zip', 'Texas', 'San Antonio')"
+    "new_df_ethnicity = compute_hit_rate_ethnicity('../data/city/tx_san_antonio.csv.zip', 'Texas', 'San Antonio')"
    ]
   },
   {
@@ -65,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_city = pd.concat([all_city, new_df])"
+    "all_city_ethnicity = pd.concat([all_city_ethnicity, new_df_ethnicity])"
    ]
   },
   {
@@ -74,7 +79,475 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_city.to_csv('../data/city/all_hit_rate_ethnicity')"
+    "all_city_ethnicity.to_csv('../data/city/all_hit_rate_ethnicity')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>subject_race</th>\n",
+       "      <th>contraband_found</th>\n",
+       "      <th>nb_find</th>\n",
+       "      <th>nb_search</th>\n",
+       "      <th>Hit_rate</th>\n",
+       "      <th>County</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>True</td>\n",
+       "      <td>110</td>\n",
+       "      <td>292</td>\n",
+       "      <td>37.671233</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2608</td>\n",
+       "      <td>7350</td>\n",
+       "      <td>35.482993</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>True</td>\n",
+       "      <td>634</td>\n",
+       "      <td>1633</td>\n",
+       "      <td>38.824250</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>other</td>\n",
+       "      <td>True</td>\n",
+       "      <td>55</td>\n",
+       "      <td>180</td>\n",
+       "      <td>30.555556</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>True</td>\n",
+       "      <td>239</td>\n",
+       "      <td>583</td>\n",
+       "      <td>40.994854</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>50</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>True</td>\n",
+       "      <td>9</td>\n",
+       "      <td>151</td>\n",
+       "      <td>5.960265</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>other</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>True</td>\n",
+       "      <td>17</td>\n",
+       "      <td>187</td>\n",
+       "      <td>9.090909</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>178 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year            subject_race  contraband_found  nb_find  nb_search  \\\n",
+       "16  2016.0  asian/pacific islander              True      110        292   \n",
+       "18  2016.0                   black              True     2608       7350   \n",
+       "20  2016.0                hispanic              True      634       1633   \n",
+       "22  2016.0                   other              True       55        180   \n",
+       "24  2016.0                   white              True      239        583   \n",
+       "..     ...                     ...               ...      ...        ...   \n",
+       "61  2018.0  asian/pacific islander              True        1          1   \n",
+       "63  2018.0                   black              True        6         50   \n",
+       "65  2018.0                hispanic              True        9        151   \n",
+       "67  2018.0                   other              True        2         10   \n",
+       "70  2018.0                   white              True       17        187   \n",
+       "\n",
+       "      Hit_rate      County         City  \n",
+       "16   37.671233  California      Oakland  \n",
+       "18   35.482993  California      Oakland  \n",
+       "20   38.824250  California      Oakland  \n",
+       "22   30.555556  California      Oakland  \n",
+       "24   40.994854  California      Oakland  \n",
+       "..         ...         ...          ...  \n",
+       "61  100.000000       Texas  San Antonio  \n",
+       "63   12.000000       Texas  San Antonio  \n",
+       "65    5.960265       Texas  San Antonio  \n",
+       "67   20.000000       Texas  San Antonio  \n",
+       "70    9.090909       Texas  San Antonio  \n",
+       "\n",
+       "[178 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_city"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_hit_rate_gender(path, county, city):    \n",
+    "    df = pd.read_csv(path, compression = 'zip')\n",
+    "    df_searched = df.query(\"search_conducted == True\")\n",
+    "    df_searched[\"date\"] = pd.to_datetime(df_searched[\"date\"])\n",
+    "    df_searched[\"year\"] = df_searched[\"date\"].dt.year\n",
+    "    df_searched_cleaned = df_searched[['year', 'subject_sex', 'search_conducted', 'contraband_found']]\n",
+    "    found = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_sex'])['contraband_found'].value_counts()).rename(columns={'contraband_found' : 'nb_find'}).reset_index()\n",
+    "    all = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_sex'])['search_conducted'].value_counts()).rename(columns={'search_conducted' : 'nb_search'}).reset_index()\n",
+    "    found_and_all = pd.merge(left = found, right = all, left_on=['year','subject_sex'], right_on = ['year', 'subject_sex']).drop(['search_conducted'], axis = 1)\n",
+    "    found_and_all['Hit_rate'] = found_and_all['nb_find'] / found_and_all['nb_search'] * 100\n",
+    "    found_and_all['County'] = county\n",
+    "    found_and_all['City'] = city\n",
+    "    return found_and_all.query('contraband_found == True')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_city_gender = compute_hit_rate_gender('..\\data\\city\\ca_oakland.csv.zip', 'California', 'Oakland')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df_gender = compute_hit_rate_gender('../data/city/tx_san_antonio.csv.zip', 'Texas', 'San Antonio')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_city_gender = pd.concat([all_city_gender, new_df_gender])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>subject_sex</th>\n",
+       "      <th>contraband_found</th>\n",
+       "      <th>nb_find</th>\n",
+       "      <th>nb_search</th>\n",
+       "      <th>Hit_rate</th>\n",
+       "      <th>County</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>True</td>\n",
+       "      <td>594</td>\n",
+       "      <td>1734</td>\n",
+       "      <td>34.256055</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3051</td>\n",
+       "      <td>8303</td>\n",
+       "      <td>36.745755</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>True</td>\n",
+       "      <td>392</td>\n",
+       "      <td>1876</td>\n",
+       "      <td>20.895522</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2114</td>\n",
+       "      <td>9005</td>\n",
+       "      <td>23.475847</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>True</td>\n",
+       "      <td>101</td>\n",
+       "      <td>1326</td>\n",
+       "      <td>7.616893</td>\n",
+       "      <td>California</td>\n",
+       "      <td>San Diego</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>66</td>\n",
+       "      <td>577</td>\n",
+       "      <td>11.438475</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>True</td>\n",
+       "      <td>30</td>\n",
+       "      <td>213</td>\n",
+       "      <td>14.084507</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>110</td>\n",
+       "      <td>881</td>\n",
+       "      <td>12.485812</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>True</td>\n",
+       "      <td>8</td>\n",
+       "      <td>98</td>\n",
+       "      <td>8.163265</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>27</td>\n",
+       "      <td>301</td>\n",
+       "      <td>8.970100</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year subject_sex  contraband_found  nb_find  nb_search   Hit_rate  \\\n",
+       "7   2016.0      female              True      594       1734  34.256055   \n",
+       "9   2016.0        male              True     3051       8303  36.745755   \n",
+       "11  2017.0      female              True      392       1876  20.895522   \n",
+       "13  2017.0        male              True     2114       9005  23.475847   \n",
+       "1   2014.0      female              True      101       1326   7.616893   \n",
+       "..     ...         ...               ...      ...        ...        ...   \n",
+       "19  2016.0        male              True       66        577  11.438475   \n",
+       "21  2017.0      female              True       30        213  14.084507   \n",
+       "23  2017.0        male              True      110        881  12.485812   \n",
+       "25  2018.0      female              True        8         98   8.163265   \n",
+       "27  2018.0        male              True       27        301   8.970100   \n",
+       "\n",
+       "        County         City  \n",
+       "7   California      Oakland  \n",
+       "9   California      Oakland  \n",
+       "11  California      Oakland  \n",
+       "13  California      Oakland  \n",
+       "1   California    San Diego  \n",
+       "..         ...          ...  \n",
+       "19       Texas  San Antonio  \n",
+       "21       Texas  San Antonio  \n",
+       "23       Texas  San Antonio  \n",
+       "25       Texas  San Antonio  \n",
+       "27       Texas  San Antonio  \n",
+       "\n",
+       "[74 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_city_gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_city_gender.to_csv('../data/city/all_hit_rate_gender.csv')"
    ]
   },
   {
