--- a/python/Hit_rate_data_processing.ipynb
+++ b/python/Hit_rate_data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,11 +551,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mean By state"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_city_gender_mean = pd.read_csv('../data/city/all_hit_rate_gender.csv')\n",
+    "all_city_ethnicity_mean = pd.read_csv('../data/city/all_hit_rate_ethnicity.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_city_gender_mean = all_city_gender_mean.groupby(['year', 'subject_sex', 'County'])['Hit_rate'].agg(['mean']).reset_index()\n",
+    "all_city_gender_mean.to_csv('../data/city/all_hit_rate_gender_mean.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_city_ethnicity_mean = all_city_ethnicity_mean.groupby(['year', 'subject_race', 'County'])['Hit_rate'].agg(['mean']).reset_index()\n",
+    "all_city_ethnicity_mean.to_csv('../data/city/all_hit_rate_ethnicity_mean.csv')"
+   ]
   }
  ],
  "metadata": {
