--- a/python/Hit_rate_data_processing.ipynb
+++ b/python/Hit_rate_data_processing.ipynb
@@ -586,6 +586,227 @@
     "all_city_ethnicity_mean = all_city_ethnicity_mean.groupby(['year', 'subject_race', 'County'])['Hit_rate'].agg(['mean']).reset_index()\n",
     "all_city_ethnicity_mean.to_csv('../data/city/all_hit_rate_ethnicity_mean.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>year</th>\n",
+       "      <th>subject_race</th>\n",
+       "      <th>contraband_found</th>\n",
+       "      <th>nb_find</th>\n",
+       "      <th>nb_search</th>\n",
+       "      <th>Hit_rate</th>\n",
+       "      <th>County</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>True</td>\n",
+       "      <td>110</td>\n",
+       "      <td>292</td>\n",
+       "      <td>37.671233</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2608</td>\n",
+       "      <td>7350</td>\n",
+       "      <td>35.482993</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>True</td>\n",
+       "      <td>634</td>\n",
+       "      <td>1633</td>\n",
+       "      <td>38.824250</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>other</td>\n",
+       "      <td>True</td>\n",
+       "      <td>55</td>\n",
+       "      <td>180</td>\n",
+       "      <td>30.555556</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>True</td>\n",
+       "      <td>239</td>\n",
+       "      <td>583</td>\n",
+       "      <td>40.994854</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Oakland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>61</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>63</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>black</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>50</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>65</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>True</td>\n",
+       "      <td>9</td>\n",
+       "      <td>151</td>\n",
+       "      <td>5.960265</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>67</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>other</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>70</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>True</td>\n",
+       "      <td>17</td>\n",
+       "      <td>187</td>\n",
+       "      <td>9.090909</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>San Antonio</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>178 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0    year            subject_race  contraband_found  nb_find  \\\n",
+       "0            16  2016.0  asian/pacific islander              True      110   \n",
+       "1            18  2016.0                   black              True     2608   \n",
+       "2            20  2016.0                hispanic              True      634   \n",
+       "3            22  2016.0                   other              True       55   \n",
+       "4            24  2016.0                   white              True      239   \n",
+       "..          ...     ...                     ...               ...      ...   \n",
+       "173          61  2018.0  asian/pacific islander              True        1   \n",
+       "174          63  2018.0                   black              True        6   \n",
+       "175          65  2018.0                hispanic              True        9   \n",
+       "176          67  2018.0                   other              True        2   \n",
+       "177          70  2018.0                   white              True       17   \n",
+       "\n",
+       "     nb_search    Hit_rate      County         City  \n",
+       "0          292   37.671233  California      Oakland  \n",
+       "1         7350   35.482993  California      Oakland  \n",
+       "2         1633   38.824250  California      Oakland  \n",
+       "3          180   30.555556  California      Oakland  \n",
+       "4          583   40.994854  California      Oakland  \n",
+       "..         ...         ...         ...          ...  \n",
+       "173          1  100.000000       Texas  San Antonio  \n",
+       "174         50   12.000000       Texas  San Antonio  \n",
+       "175        151    5.960265       Texas  San Antonio  \n",
+       "176         10   20.000000       Texas  San Antonio  \n",
+       "177        187    9.090909       Texas  San Antonio  \n",
+       "\n",
+       "[178 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_city_ethnicity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
